docs/데이터파트/version4.1/퀀트기준_대조.md
# 퀀트 기준 대조 — 우리 데이터가 표준 어디에 서 있나

> 데이터파트 **v4.1** · 2026-09-09 · 이동원 (v4.0 은 2026-09-08)
> 실측 대상: `data/outbox/2026-09-09` 반출본 (개발구간 7,888,945행 · **34칸** · 종목 3,462) ·
> `krx_cache.db` v13 (6,561 MB) · 코드 `11a68e8`
>
> **v4.1 에서 달라진 것** — [PR #189](https://github.com/devlee328288/Alpha_Stack/pull/189) 로
> §3.3(유효성)·§3.4(거래량 급변)·§3.5(판정 미탑재) 셋을 닫았습니다. 그리고
> **v4.0 이 §3.3 에서 124행을 틀리게 설명한 것을 §3.3.1 에서 정정합니다.**

---

## 0. 왜 이 문서를 썼나

반출본을 올리기 직전에 멈췄습니다. 팀장이 이렇게 물었기 때문입니다.

> 조금 더 좋은 퀄리티의 데이터를 전달할 수 있도록 고민해보고 결정하면 될 것 같습니다.
> 데이터 쪽에서 약간 부족한 부분이 많은 것 같은데 …
> 기준이나 놓치는 부분이 퀀트 측면에서 많은지 확인해보고

지금까지 우리 데이터 문서는 **"우리가 무엇을 했나"** 를 적었습니다. 이 문서는 다르게
묻습니다 — **"퀀트가 원래 지키는 것 중 우리가 안 지키는 것은 무엇인가."**

명세서의 상태표는 30항목 중 26이 ✅ 입니다. 그러니 부족한 것이 있다면 그것은
**명세서에 아직 이름조차 없는 것**입니다. 이름을 붙이려고 밖을 봤습니다.

**이 문서에 적힌 숫자는 전부 실측입니다.** 인용한 표준은 출처를 달았습니다.

---

## 1. 무엇과 대조했나

### 1.1 국내에는 참고할 사례가 없습니다

`gh search repos` 로 국내 저장소를 훑었습니다(2026-09-08).

| 저장소 | ★ | 무엇인가 |
|---|---:|---|
| `FinanceData/FinanceDataReader` | 1,539 | 데이터 **접근** 라이브러리 (우리가 쓰는 것) |
| `sharebook-kr/pykrx` | 1,088 | KRX 스크래핑 |
| `elbakramer/koapy` | 223 | 키움 OpenAPI 래퍼 |
| 그 아래 | ~50 이하 | MCP 서버 · 개인 프로젝트 |

**셋 다 "값을 가져다주는" 도구입니다.** *"이 값을 언제부터 알 수 있었나"*,
*"이 값이 성한가"*, *"이 표본에 살아남은 것만 있는 것 아닌가"* 는 답하지 않습니다.
국내에 품질·시점 정합성까지 다루는 오픈소스 파이프라인은 **없습니다.**

> 이것은 우리에게 나쁜 소식이자 좋은 소식입니다. 베낄 것이 없다는 뜻이고,
> 동시에 **우리가 만들면 국내에 흔치 않은 것**이 된다는 뜻입니다.

### 1.2 그래서 해외 표준과 맞댔습니다

| 무엇 | ★ / 출처 | 우리 파트와 겹치는 부분 |
|---|---|---|
| `microsoft/qlib` (MIT) | 48,408 | 데이터 계층 · **건강검사 4종** · `factor` 칸 · stock pool |
| `quantopian/zipline` | 20,082 | 기업행위를 **`splits`·`mergers`·`dividends` 세 표**로 |
| `akfamily/akshare` | 22,488 | 중국판 우리 `ingest/` 계층 |
| `stefan-jansen/machine-learning-for-trading` | 20,840 | 시점 정합·생존편향 교과서 |
| CRSP | 학계 표준 | `RET`(배당 포함) · `RETX`(배당 제외)를 **나눠서** 준다 |
| 데이터 품질 6차원 | 산업 표준 | 정확성·완전성·일관성·적시성·**유효성**·유일성 |

---

## 2. 우리가 이미 표준을 넘은 것 셋

### 2.1 생존 편향이 없습니다

국내 튜토리얼 대부분이 여기서 무너집니다 — "오늘의 상장 종목 목록"으로 과거를 봅니다.
그러면 그 사이 상장폐지된 종목이 통째로 빠지고, 백테스트 수익률이 실제보다 좋아집니다.

**실측**

```
DB 전 기간 종목            3,678
  최근까지 거래된 종목       2,766
  그 전에 끊긴 종목           912
개발구간(2010~2024-08) 중 끊긴 종목   750
```

연도별로 고르게 분포합니다(2010년 111 · 2020년 38 · 2024년 32). **폐지 종목이
살아 있습니다.**

30종 표본도 이것을 알고 뽑았습니다 — `중도 소멸` 3종 · `거래정지 이력` 3종이
선정 사유에 명시돼 있습니다(`MANIFEST.json` 의 `stats.stocks30.선정.사유별`).

### 2.2 시점 정합성이 강제됩니다

`as_of` 가 **기본값 없는 키워드 전용 인자**라 빠뜨릴 수가 없습니다. qlib 에도 이런
강제는 없습니다. `known_at` 은 네 축에 붙어 있습니다 — 종목 신원 · 종목기본정보 ·
거시 · 공시.

### 2.3 품질 원장이 qlib 건강검사보다 넓습니다

| | qlib `check_data_health.py` | 우리 `QUALITY_LEDGER.json` |
|---|---|---|
| 결측 | ✅ | ✅ 4지표 |
| 급변 | ✅ 가격 50% · **거래량 300%** | 🟡 가격만 (어긋남 기준) |
| 필수 칸 | ✅ | ✅ |
| `factor` 칸 | ✅ | — (`close`·`adj_close` 둘 다 있어 역산 가능) |
| 달력 정합 | — | ✅ 3지표 |
| 중복 (축마다) | — | ✅ 5지표 |
| 시점·봉인 | — | ✅ 3지표 |
| 이력 누적 | — | ✅ `reports/quality_ledger.jsonl` |
| 카드에 게시 | — | ✅ 붉은 것을 붉게 |

---

## 3. 표준에 못 미치는 것 다섯

### 3.1 🔴 기업행위 **이벤트 표**가 없습니다

**표준.** zipline 은 기업행위를 세 표로 둡니다.

```
splits     effective_date, ratio
mergers    effective_date, ratio
dividends  declared_date, ex_date, record_date, pay_date, amount
```

`SQLiteAdjustmentWriter.calc_dividend_ratios()` 가 그 이벤트에서 **비율을 계산**하고,
가격은 조회 시점에 조정합니다. CRSP 도 같습니다 — `CFACPR`(가격 조정 누적계수)를
따로 주어 `PRC / CFACPR` 로 되돌릴 수 있게 합니다.

**우리.** 이벤트 표가 없습니다. 남기는 것은 **결과와 출처**뿐입니다.

```
adj_open · adj_high · adj_low · adj_close      조정된 값
adj_source                                     fdr | chain | fdr+ca_fix | chain+ca_fix
```

사건 자체(무슨 일이 언제 몇 배로)는 `common/corporate_actions.adjustment_factor` 가
**가격과 상장주식수에서 역산**합니다. 정교하지만 원본이 아닙니다.

**왜 문제인가.** 조정 규칙이 바뀌면 다시 역산해야 하고, 메모에 적어 둔 대로
**다시 만들면 옛 행이 나빠집니다** — FDR 창이 3,000거래일 상한이라 그만큼 뒤로 밀리고
`chain` 이 늘어납니다. 이벤트 표가 있으면 규칙만 바꿔 다시 적용하면 됩니다.

**받을 수 있는데 안 받았습니다.** 코드에 이미 적혀 있습니다.

```python
# ingest/clients/data_go_kr.py
# 배당 — ⚠️ basDt 는 적재일이라 이벤트 날짜가 아니다. 빼고 부르면 전량(71,674행 · 72콜).
EP_DIVIDEND = "1160100/GetStocDiviInfoService_V2/getDiviInfo_V2"
# 권리일정 — 사유(stckIssuRcdNm)·권리기준일(rgtExertSttgDt). 수정주가 chain 대조 후보.
EP_RIGHTS_SCHEDULE = "1160100/GetStocRighScheService_V2/getRighExerReasSche_V2"
```

### 3.2 🔴 현금배당을 안 폅니다 — 우리 수익률은 `RETX` 입니다

**표준.** CRSP 는 두 가지를 **나눠서** 줍니다.

> `RET` — includes both splits, spinoffs, **and dividends** into the returns.
> `RETX` — does the same **but without dividends.**
> — Rice STAT 486 CRSP FAQ

Yahoo 의 `Adj Close` 도 *"adjusted for all applicable splits **and dividend
distributions** … adhering to CRSP standards"* 입니다.

**우리.** FDR·pykrx 의 수정주가는 **액면분할·무상증자·주식배당까지만** 폅니다.
현금배당은 안 폅니다(리서치로 확인 · `ingest/store/adj_price.py:199` 주석도 같은 범위).

> pykrx 주의사항 ④ 배당금이 조회가 되지 않으므로, **Total Return 수익률 계산을 위해서는
> 배당금 자료를 외부에서 가져와야 함**

**실측 — 배당락이 라벨을 밀고 있습니다.**

KOSPI 시가총액 상위 100 · 거래가 있던 행만 · 연말 마지막 거래일 대비 위치별 평균 일간수익률:

| 위치 | 평균 | 평소 대비 |
|---:|---:|---:|
| −4 | +0.0158% | −0.0366%p |
| −3 | −0.0591% | −0.1115%p |
| −2 | −0.0750% | −0.1274%p |
| **−1** | **−0.4025%** | **−0.4550%p** |
| 0 | +0.2082% | +0.1558%p |
| 평소 | +0.0524% | — |

15년 중 **11년이 음수**입니다(2022년 −2.090% · 2014년 −1.155% · 2021년 −1.138%).

**왜 문제인가.** 개별종목 중립대가 **±2%** 입니다. 5거래일 창에 배당락일이 들어오면
그 라벨이 평균 0.45%p, 어떤 해는 2%p 낮게 매겨집니다. **"하락" 으로 세어진 것 중
일부는 배당을 받은 것**입니다.

### 3.3 ✅ 유효성(Validity) 축을 원장에 넣었습니다 — 위반은 0행이었습니다

> **2026-09-09 갱신** — 축을 구현해 [PR #189](https://github.com/devlee328288/Alpha_Stack/pull/189) 로 넣었습니다.
> 그리고 **v4.0 에 쓴 설명이 틀렸던 것을 아래 §3.3.1 에서 정정합니다.**

표준 6차원 중 하나입니다 — *"Does the data match the rules?"* 재 봤습니다
(개발구간 7,888,945행 · 거래가 있던 7,657,261행만).

| 규칙 | 위반 |
|---|---:|
| `high >= low` | 0 |
| `high >= max(open, close)` | **124** |
| `low <= min(open, close)` | 0 |
| `open > 0` | **124** |
| `value >= 0` | 0 |
| `listed_shares > 0` | 0 |
| `adj_high >= adj_low` | 0 |
| `adj_high >= max(adj_open, adj_close)` | 0 |
| `market_cap == close × listed_shares` | 0 |

#### 3.3.1 🔴 그 124행이 무엇인지를 v4.0 에서 **틀리게 적었습니다**

v4.0 은 이렇게 적었습니다.

> ~~같은 **124행**입니다 — `open ≤ 0` 인데 **고가·저가는 살아 있습니다.** 정지 표기가
> 반쪽인 행입니다.~~

**행을 열어 보니 고가·저가도 0 이었습니다.**

| | v4.0 이 적은 것 | 실제 (2026-09-09 실측) |
|---|---|---|
| `open` | ≤ 0 | **0** |
| `high` | 살아 있음 | **0** |
| `low` | 살아 있음 | **0** |
| `close` | — | **> 0** |
| `volume` | — | **> 0** (1주·30주가 다수) |

정규장에 체결이 없어 시·고·저가가 안 잡히고, **시간외 단일가만 체결된 날**입니다.
96종목이고 우선주·리츠(코리아01~06호)·스팩에 몰려 있으며, 2010~2013 에 89건
(71.8%)이 집중되고 2024년은 1건입니다. 유동성이 극히 낮은 종목의 현상입니다.

**표의 숫자 124 는 맞았고 설명 문장만 틀렸습니다.** 숫자를 옮겨 적으면서 옆의 설명은
확인 없이 지나갔습니다.

#### 3.3.2 그래서 붉게 보지 않습니다

계산 오류가 아니라 **그 날 정규장에 체결이 없었다**는 사실이라, 원장은 이 갈래를
`nonpositive_open_rows` 로 따로 세고 **판정은 초록**으로 둡니다. 붉게 보는 것은
어떤 시장 사건으로도 설명되지 않는 둘뿐입니다 — **OHLC 순서**와 **시가총액 항등식**.
둘 다 실측 **0행**입니다.

그리고 이 124행은 `is_traded` 가 거짓이라 **작은 벌에서는 이미 빠져 있었습니다.**
큰 벌에만 남아 있었고, [PR #189](https://github.com/devlee328288/Alpha_Stack/pull/189) 로
`is_halted` 칸을 실으면서 큰 벌에서도 보이게 됐습니다.

### 3.4 ✅ 거래량 급변 축을 넣었습니다 — **KRX 시장경보 기준**으로

> **2026-09-09 갱신** — [PR #189](https://github.com/devlee328288/Alpha_Stack/pull/189) 로 넣었습니다.

qlib 은 `large_step_threshold_volume=3` 으로 **전일 대비** 3배 초과를 붉게 봅니다.
그 숫자를 그대로 켜려다 멈추고 국내·해외 기준을 찾아봤는데, **배수가 아니라
기준선이 문제**였습니다.

#### 3.4.1 세 표준이 전부 "3배" 인데 값이 2배 갈립니다

| 출처 | 배수 | **무엇에 대한 3배인가** |
|---|---|---|
| **KRX 시장경보** (시장감시규정 시행세칙 — 투자주의 지정 요건) | 3배 | 최근 **5일 평균** |
| qlib (★48,408) | 3배 | **전일** |
| 흔한 관행 | 3배 | **20일 중앙값** |

같은 "3배 초과" 를 우리 개발구간에 대 보면 —

| 기준선 | 전체 | KOSPI 상위 50 | 99.9% 분위 |
|---|---:|---:|---:|
| **KRX 5일 평균** | **5.426%** | 1.374% | 8.60배 |
| qlib 전일 | 7.977% | 1.908% | 9.54배 |
| 20일 중앙값 | 10.329% | 2.353% | 12.14배 |

**5.426% 이기도 하고 10.329% 이기도 합니다.** v4.0 을 쓸 때 저는 20일 중앙값으로
쟀는데 그것을 "3배" 라고만 적었습니다. 그대로 뒀다면 다음 사람이 다른 숫자를 보고
같은 이름으로 불렀을 것입니다.

**한국 시장에는 공식 정의가 이미 있었습니다.** KRX 가 투자주의종목을 지정할 때 쓰는
요건 중 하나가 *"당일의 거래량이 최근 5일 평균 거래량 대비 3배 이상 증가"* 입니다.
규제기관의 정의라 방어가 쉽고, 셋 중 가장 보수적이기도 해서 **그것을 씁니다**
(`supply.quality_ledger.SURGE_WINDOW = 5` · `SURGE_MULTIPLE = 3.0`).

#### 3.4.2 세되 **붉게 두지 않습니다**

10배 넘는 행이 무엇인지 열어 봤습니다 (KOSPI 시총 상위 50 · 254행).

| 날짜 | 종목 | 배수 | 무엇이었나 |
|---|---|---:|---|
| 2018-05-04 | 삼성전자 | 158.7 | **50:1 액면분할 재상장일** |
| 2021-02-24 | SK바이오팜 | 73.1 | 보호예수 해제 (−17.29%) |
| 2023-12-20 | HMM | 50.0 | 인수전 (+19.91%) |
| 2024-01-11 | 카카오페이 | 37.0 | (+21.59%) |

| | 254행 중 |
|---|---:|
| 자본변동 ±5거래일 안 | 38 (15.0%) |
| `is_extreme_return` 과 겹침 | **0 (0.0%)** |

**데이터 오류가 하나도 없습니다.** 전부 설명되는 시장 사건이고, `is_extreme_return`
과 **완전히 독립**입니다. KRX 자신도 이 값을 "오류" 가 아니라 **투자주의 지정 요건**
으로 씁니다.

붉게 두면 배포마다 게이트가 막히고, **붉은불이 흔해지면 아무도 보지 않게 됩니다.**
`is_extreme_return` 을 *"빼라"* 가 아니라 *"진짜 사건이니 남겨라"* 로 적은 것과 같은
이유입니다. 그래서 **값과 기준선을 원장에 적고 판정은 초록**으로 둡니다.

### 3.5 ✅ 판정을 만들어 두고 파일에 안 싣던 것 — **닫았습니다**

> **2026-09-09 갱신** — [PR #189](https://github.com/devlee328288/Alpha_Stack/pull/189) 로
> **주권종류 3칸 + 기업행위 3칸**을 실었습니다. 반출본이 **28 → 34칸**입니다.

이것이 **가장 자주 반복되던 결함**이었습니다. #168 로 품질 플래그 4칸을 실었는데,
같은 자리가 더 있었습니다.

| 공급 층에 있는 판정 | 반출본에 있나 | 결과 |
|---|---|---|
| 업종 (`industry` 외 3칸) | ✅ 실림 | — |
| 수정주가 품질 4칸 | ✅ **오늘 실음** (#168) | — |
| **주권종류(보통주)** | ✅ **09-09 실음** | ~~이름 규칙 + 감사 예외 10건~~ → `kind_stkcert_tp_nm` |
| **증권그룹**(리츠·SIB·DR) | ✅ **09-09 실음** | `secugrp_nm`·`sect_tp_nm` |
| **정리매매·거래정지·신규상장** | ✅ **09-09 실음** | `is_liquidation`·`is_halted`·`is_first_listing` |

**주권종류.** `supply/stock_training_universe.py` 머리말이 그대로 증언합니다.

```python
# HF 일별시세에는 주권종류가 없다. 대신 … 어긋난 10개 (코드, 당시 이름)를 전부 남겼다.
AUDITED_COMMON_EXCEPTIONS = frozenset({("115960","연우"), ("088910","동우"), …})
```

`stock_base_info.kind_stkcert_tp_nm` 이 DB 에 있는데 파일에 안 실어서, 받는 쪽이
이름으로 되짚고 있습니다. **#168 에서 신장환 님이 짚으신 것과 같은 모양입니다.**

**정리매매·거래정지·신규상장.** `supply.training.training_frame` 은 이 셋을
**떨어냅니다.** 작은 벌(`stocks30_train`)은 걸러진 표본입니다 — 89,424 → 82,852행.
그런데 큰 벌은 안 걸러집니다. **그리고 카드가 큰 벌을 이렇게 부릅니다.**

> `full/daily_price_dev.parquet` — 개발구간 전 종목 시세 — **최종 학습용은 이것**

**실측 — 큰 벌에 남아 있는 것**

```
거래정지 (체결이 없던 행)                     231,808  (2.938%)
신규상장 첫 거래일                             1,501  (0.019%)
정리매매 근사 (소멸 834종 × 마지막 10체결일)      8,299  (0.105%)
──────────────────────────────────────────────────────────────
단순 합                                     241,608  (3.063%)
```

> **2026-09-09 정정 — 정식 판정으로 재니 정리매매가 2.17배였습니다.**
>
> 위의 정리매매는 *"소멸 종목의 마지막 10체결일"* 이라는 **근사**입니다.
> `common.corporate_actions.flag_series` 정식 판정으로 재면 **17,973행**입니다.
>
> ```
> 거래정지            231,808  (2.938%)
> 신규상장 첫 거래일     1,501  (0.019%)
> 정리매매 (정식)      17,973  (0.228%)   ← 근사 8,299 의 2.17배
> ────────────────────────────────────
> 셋 중 하나라도      251,282  (3.185%)   겹침 0
> ```
>
> 근사가 절반만 잡은 이유는 **상장폐지 절차를 밟다가 거래가 재개된 종목**입니다.
> 그런 종목은 정리매매가 이력 한가운데 있어서, 이력의 끝만 보는 규칙은 영원히
> 닿지 못합니다(감마누·인포피아·우양에이치씨). 정식 판정은 *"체결이 끊기기 직전"*
> 으로 일반화해 그것까지 잡습니다.

**작은 벌과 큰 벌이 다른 규칙 위에 서 있습니다.** 둘로 학습하면 결과가 갈리는데,
칸 구성만 보고는 그것을 알 수 없습니다.

---

## 4. 그대로 베끼면 안 되는 것 — 커스터마이징

좋은 사례라도 우리 시장에 맞춰야 합니다. qlib 의 거래량 급변 기준(3배)이 그 예입니다.

| 기준 | 전체 개발구간 | **KOSPI 상위 50** (우리 유니버스) |
|---|---:|---:|
| 전일 대비 3배 초과 | **7.953%** | 1.889% |
| 5배 초과 | 3.857% | 0.389% |
| 10배 초과 | 1.697% | 0.088% |
| 100배 초과 | 0.181% | — |

qlib 기준을 그대로 켜면 **전체의 8%가 붉어집니다.** 한국 소형주는 하루 거래량이
수백 주에서 수만 주로 흔들리는 것이 평범합니다. 붉은 것이 8%면 아무도 안 봅니다.

**우리 기준은 유니버스에 맞춰 정해야 합니다.** 상위 50 에서 10배 초과가 0.088%
(154행)이라면, 그 정도가 "봐야 하는 것" 의 크기입니다.

같은 이야기가 **체결 가능성**에도 적용됩니다.

| 시가총액 순위 | 라벨 진입(T+1 시가)·청산(T+6 시가)이 불가능한 행 |
|---|---:|
| 상위 1~50 | **0.231%** |
| 상위 51~100 | 0.412% |
| 상위 101~200 | 0.512% |
| 상위 201~500 | 1.031% |
| 501위 밖 | **7.079%** |
| 전체 | 3.644% |

*(불가능 = T+1 거래량 0 · T+1 시가 0 · T+1 상한가 잠김 · T+6 거래량 0 · T+6 하한가 잠김)*

**우리 유니버스가 이미 이 문제를 막고 있습니다.** 상위 50 은 0.231% 입니다. 유니버스를
넓히자는 제안이 나오면 이 표를 먼저 봐야 합니다 — 501위 밖은 30배 나빠집니다.

---

## 5. 유니버스 오염 — 지금은 안 닿습니다

`stock_base_info` 에 거를 수 있는 칸이 **이미 있는데** 유니버스는 주권종류만 씁니다.

**2024-08-30 실측 · `secugrp_nm`**

| 값 | KOSPI | KOSDAQ |
|---|---:|---:|
| 주권 | 928 | 1,733 |
| 부동산투자회사(리츠) | 24 | — |
| 외국주권 | 1 | 12 |
| 주식예탁증권(DR) | 1 | 8 |
| 투자회사 | 3 | — |
| 사회간접자본투융자회사 | 1 | — |

**`sect_tp_nm`(소속부)** 로는 KOSDAQ 에서 SPAC 96 · 관리종목 63 · 투자주의환기종목 44 ·
외국기업 19 가 갈립니다.

**보통주 시가총액 순으로 세어 본 오염**

| | KOSPI | KOSDAQ |
|---|---|---|
| 상위 50 | **0건** | 주식예탁증권 1 · 외국기업 1 |
| 상위 100 | 사회간접자본투융자회사 1 (맥쿼리인프라) | + 관리종목 1 |
| 상위 200 | + 부동산투자회사 | + 투자주의환기종목 1 |
| 전체 | 30건 | 20건 |

**우리 개별종목 트랙은 KOSPI 상위만 봅니다** — 업종별 상위 5 × 10업종. 그래서 지금은
안 닿습니다. 다만 **유니버스를 넓히거나 KOSDAQ 을 넣는 순간 닿습니다.**

---

## 6. 정리 — 일곱 축의 판정

| # | 축 | 실측 | 판정 |
|---|---|---|---|
| 1 | 생존 편향 | 개발구간 중 끊긴 종목 750개 보존 | ✅ 없음 |
| 2 | 우선주 판정 | KRX 주권종류 기반 (이름 규칙 아님) | ✅ 정석 |
| 3 | 유니버스 오염 | KOSPI 상위 50 에 0건 · 전체로는 30건 · **거를 칸을 09-09 실음** | 🟡 지금은 안 닿음 |
| 4 | 체결 가능성 | 상위 50 은 0.231% · 501위 밖은 7.079% | 🟡 유니버스가 막고 있음 |
| 5 | 판정을 파일에 안 실음 | 주권종류 3칸 + 기업행위 3칸 · 정식 판정 **3.185%** | ✅ **09-09 닫음** |
| 6 | 현금배당 미조정 | 배당락일 −0.455%p · 15년 중 11년 음수 | 🔴 라벨에 닿음 |
| 7 | 이상치 집중 | 전체 평균의 **96.1%가 한 행** (008080 · 6,699,900%) | 🔴 실질 결함 |

추가로 §3.1 기업행위 **이벤트 표**는 아직 없습니다. §3.3 유효성 축과 §3.4 거래량 급변은
**09-09 에 원장에 넣었습니다** (5축 → **7축**).

| 축 | 지표 | 값 | 판정 |
|---|---|---:|:--:|
| `validity` | `ohlc_order_rows` | 0 | ✅ |
| | `market_cap_identity_rows` | 0 | ✅ |
| | `negative_value_rows` | 0 | ✅ |
| | `nonpositive_open_rows` | 124 | 기록 |
| `volume` | `surge_rows` (KRX 5일 평균 · 3배) | 413,899 (5.426%) | 기록 |
| | `surge_ratio_p999` | 66.66배 | 기록 |

---

## 7. 무엇을 어떤 순서로 할 것인가 — 선택지

각 항목은 **"무엇을 만들면 끝인가"** 를 함께 적습니다. 이름만 적은 것은 계획이 아닙니다.

### A. 판정을 파일에 싣는다 (§3.5) — 비용 낮음 · 효과 즉시

**만들면 끝나는 것**
- `daily_price_dev.parquet` 에 `kind_stkcert_tp_nm`·`secugrp_nm`·`sect_tp_nm` 세 칸
- 같은 파일에 `is_liquidation`·`is_halted`·`is_first_listing` 세 칸
- `supply/stock_training_universe.py` 의 `AUDITED_COMMON_EXCEPTIONS` **삭제**
- 카드에 "작은 벌은 이 셋을 뺀 표본, 큰 벌은 안 뺀 표본" 을 명시

**얻는 것.** 모델 파트가 이름 규칙을 안 씀. 큰 벌과 작은 벌의 차이가 보임.
**드는 것.** 반출 1회 재생성 + 재배포. 칸 28 → 34.

### B. 배당을 받아 총수익 축을 만든다 (§3.2) — 비용 중간 · 라벨에 직접

**만들면 끝나는 것**
- `dividend` 표 (공공데이터포털 `EP_DIVIDEND` · 71,674행 · 72콜) + 마이그레이션
- `adj_close_tr` (총수익 수정종가) 칸 — **`adj_close` 는 그대로 둡니다**
- 라벨을 둘 다 만들어 **어느 축이 맞는지 팀이 고르게** (CRSP 가 `RET`/`RETX` 를
  나눠 주는 이유와 같습니다)

**얻는 것.** 배당락이 "하락" 으로 세어지는 것을 끊음.
**드는 것.** 수집 1회 + 검증 + 재생성. 반나절.

### C. 원장에 두 축을 더한다 (§3.3 · §3.4) — 비용 낮음

**만들면 끝나는 것**
- `validity` 축 — OHLC 정합 · 항등식 · 부호 (지금 124행이 잡힙니다)
- `outlier` 축에 거래량 급변 — **기준은 §4 대로 우리가 정합니다**

### D. 기업행위 이벤트 표 (§3.1) — 비용 높음 · 나중

**만들면 끝나는 것**
- `corporate_action` 표 (`EP_RIGHTS_SCHEDULE` 권리일정 + DART 대조)
- `adjustment_factor` 가 역산이 아니라 **이벤트에서** 계산

**언제 할 것인가.** A·B·C 를 하고 나서. 지금 하면 A·B 가 밀립니다.

### E. 이상치 처리 기준을 문서에 못박는다 (§6-7) — 비용 낮음

**만들면 끝나는 것**
- 규약에 "피처로 쓸 때 무엇을 어떻게 자르는가" 한 절 (윈저라이즈 · 로버스트 스케일링)
- `adj_return_1d` 처럼 **근거값으로 실은 칸**과 피처로 쓸 칸을 카드에서 구분

---

## 8. 알면서 안 한 것

- **KOSDAQ 유니버스 오염**은 재기만 하고 안 고쳤습니다. 우리 트랙이 KOSPI 만 쓰기
  때문입니다. 넓히자는 논의가 나오면 §5 를 먼저 봅니다.
- **배당의 정확한 이벤트 날짜**는 아직 모릅니다. 포털 `basDt` 가 적재일이라 배당락일이
  아닙니다 — 받은 뒤 권리일정과 대조해야 합니다.
- **§3.5 의 `is_liquidation` 근사**는 "소멸 종목의 마지막 10체결일" 입니다.
  `common/corporate_actions.flag_series` 의 정식 판정과 다를 수 있어, 실제 반출 때는
  그 함수를 씁니다.
- **거래량 급변 기준값**을 아직 안 정했습니다. §4 의 표가 근거이고, 결정은 팀과 합니다.

---

## 부록 A. 재현 방법

이 문서의 숫자는 전부 `data/outbox/2026-09-08` 반출본과 `krx_cache.db` v13 에서
잰 것입니다. 반출본은 `.gitignore` 되므로 다시 만들려면:

```bash
python scripts/export_team_dataset.py          # 약 12분
```

측정 코드는 이 문서 본문에 규칙으로 적어 두었습니다 — 스크립트를 따로 두지 않은 것은,
**측정식을 따로 쓰면 가지를 빠뜨리기 때문**입니다(2026-09-07 NAVER 13종목 누락).
실제 판정에 쓸 때는 `supply/adj_quality.py`·`common/corporate_actions.py` 의
공개 함수를 부릅니다.

## 부록 B. 인용

- CRSP `RET`/`RETX` — Rice STAT 486/686 CRSP FAQ · Stanford GSB Research Guide
- Yahoo `Adj Close` 가 CRSP 기준을 따른다 — Yahoo Help SLN28256
- zipline 기업행위 세 표 — `zipline/data/adjustments.py` ·
  `SQLiteAdjustmentWriter.write(splits, mergers, dividends, stock_dividends)`
- qlib 건강검사 — `scripts/check_data_health.py` ·
  `large_step_threshold_price=0.5` · `large_step_threshold_volume=3`
- 데이터 품질 6차원 — DAMA UK, *The Six Primary Dimensions for Data Quality Assessment*
- pykrx 배당 미제공 — 사용자 안내 문서 및 커뮤니티 정리 (2026-09-08 확인)
